--- a/first.css
+++ b/first.css
@@ -4,15 +4,15 @@
     margin: 0px;
     font-family: 'Bitter', serif;
 	background-color: white; 
-	
 }
 
 .menu-items{
     text-align: center;
     padding: 10px;
-    margin: 40px 20px;
+    margin: 40px 0px;
     width: 100%;
     text-transform: uppercase;
+	font-weight: bold;
 }
 
 /*topnav*/
@@ -65,6 +65,7 @@
     margin-right: auto;
     margin-bottom: 10px;
     text-align: center;
+	margin-bottom: 60px;
 }
 
 #name-box {
@@ -92,11 +93,11 @@
     width: 100%;
 }
 
-.summary{
-	margin: 100px;
+#summary{
 	max-width: 1200px;
 	text-align: center;
 	display: inline-block;
+	font-size: 20px;
 }
 
 /*grid skills*/
@@ -118,6 +119,8 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+	text-align: center;
+	display: block;
 }
 
 .filter, .sort {
@@ -274,11 +277,18 @@
 
 .projects-tile-text{
     background-color:rgba(121,190,168,0.90);
-    color:  #fafcfb;;
+    color:  #fafcfb;
     font-size: 20px;
 }
 
 /* education */
+
+#education-section{
+	color: #141414;
+	padding-bottom: 40px;
+	padding-top: 20px;
+	background-image: url("images/edu.jpg");
+}
 
 .timeline {
     position: relative;
@@ -291,7 +301,7 @@
     content: '';
     position: absolute;
     width: 6px;
-    background-color: #247058;
+    background-color: #141414;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -304,6 +314,8 @@
     background-color: inherit;
     width: 50%;
     margin-bottom: -100px;
+	color: #141414;
+
 }
 
 /* circles on the timeline */
@@ -314,17 +326,15 @@
     height: 25px;
     right: -16px;
     background-color: white;
-    border: 4px solid #79BEA8;
+    border: 4px solid #141414;;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
 }
 
-
 .left {
     left: 0;
 }
-
 
 .right {
     left: 50%;
@@ -341,7 +351,7 @@
     right: 30px;
     border: medium solid white;
     border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+    border-color: transparent transparent transparent  #79BEA8;
 }
 
 /* arrows right container (pointing left) */
@@ -355,7 +365,7 @@
     left: 30px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    border-color: transparent  #79BEA8 transparent transparent;
 }
 
 /* Fix the circle for containers on the right */
@@ -365,7 +375,7 @@
 
 .timeline-content {
     padding: 20px 30px;
-    background-color: #fafcfb;
+    background-color: #79BEA8;
     position: relative;
     border-radius: 6px;
 }
@@ -480,10 +490,106 @@
     cursor: pointer;
 }
 
+/* Recommendations */
+
+.quote{
+width: 960px; 
+margin: 0 auto; 
+padding-top: 80px; 
+padding-bottom: 80px;
+}
+
+h1 {
+  font-size: 16px; 
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.testimonial-quote {
+    font-size: 16px;
+}
+
+.testimonial-quote blockquote {
+    /* Negate theme styles */
+    border: 0;
+    margin: 0;
+    padding: 0;
+
+    background: none;
+    color: gray;
+    font-family: Georgia, serif;
+    font-size: 1.5em;
+    font-style: italic;
+    line-height: 1.4 !important;
+    margin: 0;
+    position: relative;
+    text-shadow: 0 1px white;
+    z-index: 600;
+}
+
+.testimonial-quote blockquote * {
+    box-sizing: border-box; 
+}
+
+.testimonial-quote blockquote p {
+    color: #75808a; 
+    line-height: 1.4 !important;
+}
+
+.testimonial-quote blockquote p:first-child:before {
+    content: '\201C';
+    color: #81bedb;
+    font-size: 7.5em;
+    font-weight: 700;
+    opacity: .3;
+    position: absolute;
+    top: -.4em;
+    left: -.2em;    
+    text-shadow: none;
+    z-index: -300;
+}
+
+.testimonial-quote cite {
+    color: gray;
+    display: block;
+    font-size: .8em; 
+}
+  
+.testimonial-quote cite span {
+    color: #5e5e5e;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-shadow: 0 1px white; 
+}
+
+.testimonial-quote {
+    position: relative; 
+}
+
+.testimonial-quote .quote-container {
+    padding-left: 160px; 
+}
+  
+.testimonial-quote.right .quote-container {
+    padding-left: 0;
+    padding-right: 160px; 
+}
+
+.testimonial-quote.right img {
+    left: auto;
+    right: 0;
+}
+
+.testimonial-quote.right cite {
+    text-align: right; 
+}
 
 /* Contact */
 
-  #contact-container{
+  #contact-section{
     text-align: center;
 }
 
