--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     color: #141414;
     margin: 0px;
     font-family: 'Bitter', serif;
-	background-color: white; 
+    background-color: white; 
 }
 
 .menu-items{
@@ -12,8 +12,10 @@
     margin: 40px 0px;
     width: 100%;
     text-transform: uppercase;
-	font-weight: bold;
+    font-weight: bold;
+    color: #141414;
 }
+
 
 /*topnav*/
 .topnav{
@@ -63,21 +65,19 @@
     display: none;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). 
+/* When the screen is less than 600 pixels wide, 
+hide all links, except for the first one ("Home"). 
 Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-    #topnav-btn {
-      display: none;
-    }
-    .topnav li.icon {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
       float: right;
       display: block;
     }
   }
 
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. 
-  This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+
+  @media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -87,13 +87,6 @@ Show the link that contains should open and close the topnav (.icon) */
     .topnav.responsive a {
       float: none;
       display: block;
-      text-align: left;
-    }
-    .topnav.responsive .dropdown {float: none;}
-    .topnav.responsive .dropdown-content {position: relative;}
-    .topnav.responsive .dropdown .dropbtn {
-      display: block;
-      width: 100%;
       text-align: left;
     }
   }
@@ -128,12 +121,14 @@ Show the link that contains should open and close the topnav (.icon) */
     text-align: center;
     display: table-cell; 
     vertical-align: middle;
+    font-size: 20px;
 }
 
 #pic{
-    width: 100%;
-    margin-top: -60px;
-    padding-bottom: 60px;
+    background-image:url('images/main.jpg');
+    height: 600px;
+    background-size: cover;
+    background-position-y: center;
 }
 
 #summary{
