--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@
     list-style-type: none;
     overflow: hidden;
     position: fixed;
-    top: 0;
-    /* margin-bottom: 30px; */
+    top: 0; 
     background-color: white; 
     text-align:center; 
     width:100%;
@@ -32,7 +31,7 @@
 
 .topnav ul {
     padding: 0px;
-	margin: 0px;
+	margin: -6px;
 }
 
 .topnav li {
@@ -69,7 +68,7 @@
 hide all links, except for the first one ("Home"). 
 Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav li {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
@@ -127,7 +126,6 @@ Show the link that contains should open and close the topnav (.icon) */
 #pic{
     background-image:url('images/main.jpg');
     height: 600px;
-    
     background-size: cover;
     background-position-y: center;
 }
@@ -512,7 +510,7 @@ Show the link that contains should open and close the topnav (.icon) */
 .popup {
     display: none; 
     position: fixed; 
-    z-index: 1; 
+    z-index: 1000; 
     padding-top: 10%; 
     left: 0;
     top: 0;
@@ -576,6 +574,7 @@ Show the link that contains should open and close the topnav (.icon) */
 .carousel-indicators{
     position: relative;
     padding: 10px;
+    z-index: 1;
 }
 
 .carousel-indicators li{
@@ -585,11 +584,13 @@ Show the link that contains should open and close the topnav (.icon) */
     border-color: #141414;
     width: 15px;
     height: 15px;
+    z-index: 1;
     }
 
 .carousel-indicators .active {
             width: 20px;
             height: 20px;
+            z-index: 1;
 }
 
 .testimonial-quote blockquote {
