--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     margin: 0px;
     font-family: 'Bitter', serif;
     background-color: white; 
-
 }
 
 .menu-items{
@@ -69,6 +68,8 @@ body {
 /* When the screen is less than 600 pixels wide, 
 hide all links, except for the first one ("Home"). 
 Show the link that contains should open and close the topnav (.icon) */
+
+
 @media screen and (max-width: 600px) {
     .topnav li {display: none;}
     .topnav a.icon {
@@ -77,21 +78,20 @@ Show the link that contains should open and close the topnav (.icon) */
     }
   }
 
-
   @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {position: fixed;}
     .topnav.responsive a.icon {
       position: absolute;
       right: 0;
       top: 0;
     }
-    .topnav.responsive a {
+    .topnav.responsive li {
       float: none;
       display: block;
       text-align: left;
+      width: 100%;
     }
   }
-  
   
 /*about*/
 #about{
@@ -136,8 +136,25 @@ Show the link that contains should open and close the topnav (.icon) */
 	max-width: 1200px;
 	text-align: center;
 	display: inline-block;
-	font-size: 20px;
+    font-size: 20px;
+    padding: 0px 20px;
 }
+
+@media screen and (max-width: 600px) {
+    #pic{
+        width: 100%;
+        background-position-x: center;
+    }
+
+    #name-box {
+        position: absolute;
+        top: 75%;
+        left: 0%;
+        width: 100%;
+        display: table; 
+        border-radius: 0px;
+    }
+  }
 
 /*grid skills*/
 #skills-section{
@@ -155,6 +172,7 @@ Show the link that contains should open and close the topnav (.icon) */
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px; 
+    padding: 0px 40px;
 }
 
 .filter-button-group, .sort-button-group{
@@ -181,6 +199,7 @@ Show the link that contains should open and close the topnav (.icon) */
     margin-bottom: 10px;
     font-family: 'Bitter', serif;
 }
+
 .filter:hover {background-color: #008080; color: white;}
 .sort:hover {background-color: #008080; color: white;}
 
@@ -241,6 +260,7 @@ Show the link that contains should open and close the topnav (.icon) */
   .rating-bar, .rating-bar span {
     border-radius:3px; 
   }
+
   
   /* Used to color the bars */
   .red{ background:#9A3334; }  /* 1-3 */
@@ -288,6 +308,66 @@ Show the link that contains should open and close the topnav (.icon) */
   @keyframes progress {
     from { width:0% }
     to { width:100%; }
+  }
+
+  @media screen and (max-width: 600px) {
+
+    .skill-item {
+        width: 100px;
+        height: 100px;
+        border-radius:20px;
+      }
+
+      .name{ 
+        position: absolute;
+        bottom: 15%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80px;
+        font-size: 12px;
+    }
+    .logo{
+        position: relative;
+        top: 50%;
+        width: 35px;
+    }
+    .rating-bar{
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        background:#093426;
+        padding: 2px;
+        width: 74%;
+      }
+
+      .rating-bar span{
+        display:block;
+        height:5px;
+      }
+
+      .rating-bar, .rating-bar span {
+        border-radius:1.5px; 
+      }
+
+      .skill-item:active {
+    transform: scale(1.1);
+    background-color: #008080;
+    display: block;
+    color: white;
+    }
+
+    .filter-button-group, .sort-button-group{
+        position: relative;
+        max-width: 550px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        display: block;
+    }
+    
+    .filter{
+        min-width: 120px;
+    }
   }
 
 /* projects */
@@ -553,6 +633,8 @@ Show the link that contains should open and close the topnav (.icon) */
     cursor: pointer;
 }
 
+/* Recommendations */
+
 .recommendation-img {
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -566,8 +648,6 @@ Show the link that contains should open and close the topnav (.icon) */
 .recommendation-img:hover {
     box-shadow: 0 0 2px 1px rgba(121,190,168, 0.5);
 }
-
-/* Recommendations */
 
 .testimonial-quote {
     font-size: 15px;
