--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,12 @@ body {
     font-weight: bold;
     color: #141414;
 }
-
+@media screen and (max-width: 600px) {
+    .menu-items {
+        margin: 10px;
+        font-size: 25px;
+      }
+}
 
 /*topnav*/
 .topnav{
@@ -32,12 +37,12 @@ body {
 
 .topnav ul {
     padding: 0px;
-	margin-bottom: -6px;
+    margin-bottom: -6px;
+    margin-left: 0px;
 }
 
 .topnav li {
   display: inline-block;
-  width: 10%;
   overflow: hidden;
 }
 
@@ -63,12 +68,8 @@ body {
 
   .topnav .icon {
     display: none;
+    font-size: 30px;
 }
-
-/* When the screen is less than 600 pixels wide, 
-hide all links, except for the first one ("Home"). 
-Show the link that contains should open and close the topnav (.icon) */
-
 
 @media screen and (max-width: 600px) {
     .topnav li {display: none;}
@@ -143,7 +144,7 @@ Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
     #pic{
         width: 100%;
-        background-position-x: center;
+        background-position-x: 80%;
     }
 
     #name-box {
@@ -151,28 +152,31 @@ Show the link that contains should open and close the topnav (.icon) */
         top: 75%;
         left: 0%;
         width: 100%;
-        display: table; 
+        display: inline-block;
         border-radius: 0px;
     }
+    .textbox{
+        display: inline-block;
+        position: absolute;
+        transform: translateX(-50%);
+    }
+ 
+  #summary{
+      font-size: 15px;
   }
+}
 
 /*grid skills*/
 #skills-section{
 	background-color: #141414;
 	color: white;
 	padding-bottom: 40px;
-	padding-top: 20px;
+    padding-top: 20px;
+    position: relative;
 }
 
 #skills{
 	color: white;
-}
-
-.grid{
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1200px; 
-    padding: 0px 40px;
 }
 
 .filter-button-group, .sort-button-group{
@@ -203,7 +207,30 @@ Show the link that contains should open and close the topnav (.icon) */
 .filter:hover {background-color: #008080; color: white;}
 .sort:hover {background-color: #008080; color: white;}
 
-/*skill elements*/
+.grid{
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    max-width: 1200px;
+}
+
+.skill-item {
+    float: left;
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    background: #fafcfb;
+    color: #141414;
+    cursor: pointer;
+    transition: background 0.4s, box-shadow 0.4s;
+    border-radius: 25px;
+  }
+.skill-item:hover {
+    transform: scale(1.1);
+    background-color: #008080;
+    color: white;
+}
+
 .name{ 
     position: absolute;
     bottom: 25%;
@@ -221,28 +248,6 @@ Show the link that contains should open and close the topnav (.icon) */
 }
 .experience {display: none;}
 .active-skill{filter: none;}
-
-.skill-item {
-    position: relative;
-    float: left;
-    width: 150px;
-    height: 150px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 20px;
-    background: #fafcfb;
-    color: #141414;
-    text-align: center;
-    cursor: pointer;
-    transition: background 0.4s, box-shadow 0.4s;
-    border-radius: 25px;
-  }
-.skill-item:hover {
-    transform: scale(1.1);
-    background-color: #008080;
-    display: block;
-    color: white;
-}
 
 /*rating bar*/
 .rating-bar{
@@ -380,13 +385,33 @@ Show the link that contains should open and close the topnav (.icon) */
 }
 
 #projects-tile-container{
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+    align-content: stretch;
     border-radius: 15px;
     max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.projects-tile {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 10px;
+    width: 400px;
+    height: 200px;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #008080;
+    border-radius: 10px;
+    margin: 20px;
+  }
 
 .tile-app:hover, .tile-large:hover, .tile-medium:hover, .tile-small:hover, .tile-wide:hover {
     outline: none;
@@ -399,23 +424,16 @@ Show the link that contains should open and close the topnav (.icon) */
     transform: translate(-50%,-50%);
 }
 
-.projects-tile{
-    background-color: #fafcfb;
-    display: inline-block;
-    width: 350px;
-    height: 200px;
-    color:  #141414;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #008080;
-    border-radius: 10px;
-    margin: 20px;
-}
-
 .projects-tile-text{
     background-color:rgba(121,190,168,0.9);
     color:  #fafcfb;
     font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    .projects-tile {
+        margin: 10px;
+      }
 }
 
 /* education */
@@ -567,7 +585,6 @@ Show the link that contains should open and close the topnav (.icon) */
     background-color: #f1f1f1;
     margin: 10px;
     padding: 10px;
-    font-size: 30px;
     width: 400px;
     height: 200px;
     font-size: 20px;
@@ -597,7 +614,7 @@ Show the link that contains should open and close the topnav (.icon) */
     display: none; 
     position: fixed; 
     z-index: 1000; 
-    padding-top: 10%; 
+    padding: 20% 25%;
     left: 0;
     top: 0;
     width: 100%; 
@@ -605,17 +622,28 @@ Show the link that contains should open and close the topnav (.icon) */
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
-
 }
 
 .popup-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
-    height: 90%;
+    border: 1px solid #008080;
     border-radius: 15px;
+}
+
+.recommendation-img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px; 
+}
+
+.recommendation-img:hover {
+    box-shadow: 0 0 2px 1px rgba(121,190,168, 0.5);
 }
 
 .close {
@@ -633,27 +661,23 @@ Show the link that contains should open and close the topnav (.icon) */
     cursor: pointer;
 }
 
-/* Recommendations */
+@media screen and (max-width: 600px) {
+.popup{
+    padding: 30% 5%;
+}
 
 .recommendation-img {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height:50%; 
+    width: 100px; 
 }
+  }
 
-.recommendation-img:hover {
-    box-shadow: 0 0 2px 1px rgba(121,190,168, 0.5);
-}
+/* Recommendations */
 
 .testimonial-quote {
     font-size: 15px;
     max-width: 1000px;
     display: block;
-    margin: 10px auto;
+    margin: 0 auto;
     padding-top: 30px;
 }
 
@@ -661,6 +685,7 @@ Show the link that contains should open and close the topnav (.icon) */
     position: relative;
     padding: 10px;
     z-index: 1;
+    bottom: 0;
 }
 
 .carousel-indicators li{
@@ -732,7 +757,7 @@ Show the link that contains should open and close the topnav (.icon) */
 .testimonial-quote cite {
     color: gray;
     display: block;
-    font-size: 1em; 
+    font-size: 1.2em; 
     padding-top: 30px;
 }
   
@@ -760,6 +785,30 @@ Show the link that contains should open and close the topnav (.icon) */
     padding-right: 160px; 
 }
 
+@media screen and (max-width: 600px) {
+    .testimonial-quote blockquote * {
+       font-size: 15px; 
+       padding-top: 10px;
+       padding-bottom: 15px;
+    }
+    .testimonial-quote cite {
+        font-size: 10px;   
+    }
+    .carousel-indicators{
+        padding: 5px;
+    }
+    
+    .carousel-indicators li{
+        width: 7px;
+        height: 7px;
+        }
+    
+    .carousel-indicators .active {
+        width: 10px;
+        height: 10px;
+    }
+      }
+
 /* Contact */
 
   #contact-section{
@@ -786,4 +835,9 @@ Show the link that contains should open and close the topnav (.icon) */
 .contact-icon{
     width: 30px;
     height: 30px;
+}
+@media screen and (max-width: 600px) {
+    #contact-form{
+        font-size: 17px; 
+    }
 }
